fix disable color on iOS

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -26,7 +26,8 @@
   input {
     width: 100%;
     &:disabled {
-      color: #666;
+      -webkit-text-fill-color: #666;
+      opacity: 1;
     }
   }
   button {
